--- a/Public/Home/css/header.css
+++ b/Public/Home/css/header.css
@@ -53,9 +53,15 @@ legend{
     float: left;
     margin-left: 50px;
 }
+#header_box_one>a:nth-child(1){
+    color: #888888;
+}
 #header_box_two{
     float: left;
     margin-left:30px;
+}
+#header_box_two>a{
+    color: #888888;
 }
 #header_box_three{
     float: left;
@@ -88,7 +94,8 @@ legend{
     width: 85px;
     height: 25px;
     cursor: pointer;
-    border:1px solid #B3B3B3;
+    border: 1px solid #cccccc;
+    border-radius: 4px;
     box-sizing: border-box;
     border-right: none;
 }
@@ -98,7 +105,8 @@ legend{
     float: left;
     width: 20px;
     height: 25px;
-    border:1px solid #B3B3B3;
+    border: 1px solid #cccccc;
+    border-radius: 4px;
     box-sizing: border-box;
 }
 .header_box_four_three{
@@ -106,7 +114,7 @@ legend{
     height: 200px;
     background: transparent;
     position: absolute;
-    right:0px;
+    right:0;
     top:15px;
     z-index: 100;
     display:none;
@@ -118,12 +126,12 @@ legend{
 }
 .header_box_four_three_tran{
     width: 400px;
-    height: 217px;
+    height: 212px;
     background: #ffffff;
-    border-radius: 4px;
+    border-radius: 8px;
+    border-collapse:collapse;
 }
 tr,td{
-    border: 1px solid #B3B3B3;
     text-align: center;
 }
 table{
@@ -131,15 +139,18 @@ table{
     height: 100px;
 }
 tr{
-    height: 20px; ;
+    height: 15px;
+    background: #ddd;
 }
 td{
     width: 100px;
-    height: 20px;
+    height: 15px;
+
 }
 #header_box_four:hover .header_box_four_three{
     display: block;
 }
+
 
 #nav{
     background: rgba(255, 255, 255, .5);
@@ -314,10 +325,18 @@ td{
     line-height: 50px;
     margin-right: 20px;
     border-bottom: 1px solid #CCCCCC;
+    position: relative;
 }
 .login_two>input{
     border:none;
     background: transparent;
+}
+
+#notice_three{
+    position: absolute;
+    top: -16px;
+    left:136px ;
+    z-index : 100;
 }
 .login_three{
     width: 100%;
