--- a/Public/Home/css/reset.css
+++ b/Public/Home/css/reset.css
@@ -8,12 +8,11 @@ dl, dt, dd, ol, ul, li,
 table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, figcaption, figure,
 footer, header, menu, nav, section, summary,
-time, mark, audio, video {
+ audio, video {
     margin:0;
     padding:0;
     border:0;
     outline:0;
-    font-size:14px;
     vertical-align:baseline;
     background:transparent;
 }
@@ -23,7 +22,7 @@ body {
 }
 
 :focus {
-    outline:1;
+    outline: 1;
 }
 
 article,aside,canvas,details,figcaption,figure,
@@ -53,7 +52,6 @@ a {
     vertical-align:baseline;
     background:transparent;
 }
-
 ins {
     background-color:#ff9;
     color:#000;
@@ -75,7 +73,6 @@ abbr[title], dfn[title] {
     border-bottom:1px dotted #000;
     cursor:help;
 }
-
 hr {
     display:block;
     height:1px;
@@ -84,11 +81,6 @@ hr {
     margin:1em 0;
     padding:0;
 }
-
 input, select {
     vertical-align:middle;
-}
-.ac_results li {
-    height: 30px;
-    line-height: 30px!important;
 }
