Signed-off-by: Akon916 <akon916@163.com> 修改注册登录方法路径

--- a/Application/Home/View/index/index.html
+++ b/Application/Home/View/index/index.html
@@ -38,7 +38,7 @@
                 <a href="" id="login_name"></a>
                 <a href="#" id="sign_out" class="sign_out">.退出</a>
             </div>
-            <div class="header_box_three_bor"><a href="login/register.html">注册</a></div>
+            <div class="header_box_three_bor"><a href="{:U('user/index')}">注册</a></div>
         </div>
         <div id="header_box_four">
             <div class="header_box_four_one">所有游戏</div>
