--- a/Application/Home/View/index/index.html
+++ b/Application/Home/View/index/index.html
@@ -136,7 +136,7 @@
                         <li><a href="#">微信<img src="__PUBLIC__/Home/image/weixin.png" style="width: 20px;height: 20px;" alt=""/></a></li>
                         <li><a href="#">微博<img src="__PUBLIC__/Home/image/weibo.png" style="width: 20px;height: 20px;" alt=""/></a></li>
                     </ul>
-                    <a class="login_register" href="login/register.html">注册账号</a>
+                    <a class="login_register" href="{:U('user/index')}">注册账号</a>
                 </div>
             </div>
         </div>
