Signed-off-by: Akon916 <akon916@163.com> 新增admin列表功能 清除无用文件

--- a/Application/Admin/View/index/menu.html
+++ b/Application/Admin/View/index/menu.html
@@ -60,7 +60,7 @@
   <li>
    <ul class="menu-children">
     <li><a href="../../Public/basic_settings.html" title="站点基本设置" target="mainCont">站点基本设置</a></li>
-    <li><a href="../../Public/admin_list.html" title="站点基本设置" target="mainCont">站点管理员</a></li>
+    <li><a href="{:U('admin/admin/index')}" title="站点管理员" target="mainCont">站点管理员</a></li>
    </ul>
   </li>
   
