--- a/Application/Admin/View/index/top.html
+++ b/Application/Admin/View/index/top.html
@@ -11,7 +11,7 @@
   <img src="__PUBLIC__/Admin/images/admin_logo.png" title="在哪儿"/>
  </div>
  <div class="fr top-link">
-  <a href="#" target="_blank" title="访问站点"><i class="shopLinkIcon"></i><span>访问站点</span></a>
+  <a href="{:U('home/index/index')}" target="_blank" title="访问站点"><i class="shopLinkIcon"></i><span>访问前台</span></a>
   <a href="__PUBLIC__/Admin/admin_list.html" target="mainCont" title="DeathGhost"><i class="adminIcon"></i><span>管理员：DeathGhost</span></a>
   <a href="#" title="修改密码"><i class="clearIcon"></i><span>清除缓存</span></a>
   <a href="__PUBLIC__/Admin/revise_password.html" target="mainCont" title="修改密码"><i class="revisepwdIcon"></i><span>修改密码</span></a>
