--- a/Application/Admin/View/admin/admin_list.html
+++ b/Application/Admin/View/admin/admin_list.html
@@ -3,15 +3,15 @@
 <head>
 <title>管理员列表</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link href="css/adminStyle.css" rel="stylesheet" type="text/css" />
-<script src="js/jquery.js"></script>
-<script src="js/public.js"></script>
+<link href="../../../../Public/Admin/css/adminStyle.css" rel="stylesheet" type="text/css" />
+<script src="../../../../Public/Admin/js/jquery.js"></script>
+<script src="../../../../Public/Admin/js/public.js"></script>
 </head>
 <body>
  <div class="wrap">
   <div class="page-title">
     <span class="modular fl"><i class="user"></i><em>管理员列表</em></span>
-    <span class="modular fr"><a href="revise_password.html" class="pt-link-btn">+添加管理员</a></span>
+    <span class="modular fr"><a href="../../../../Public/Admin/revise_password.html" class="pt-link-btn">+添加管理员</a></span>
   </div>
   <table class="list-style Interlaced">
    <tr>
@@ -27,8 +27,8 @@
     <td class="center">2015-04-18 17:38</td>
     <td class="center">2015-04-19 15:38</td>
     <td class="center">
-     <a href="revise_password.html"><img src="images/icon_edit.gif"/></a>
-     <a><img src="images/icon_drop.gif"/></a>
+     <a href="../../../../Public/Admin/revise_password.html"><img src="../../../../Public/Admin/images/icon_edit.gif"/></a>
+     <a><img src="../../../../Public/Admin/images/icon_drop.gif"/></a>
     </td>
    </tr>
   </table>
