--- a/Public/Home/css/index.css
+++ b/Public/Home/css/index.css
@@ -150,15 +150,6 @@ td{
 #header_box_four:hover .header_box_four_three{
     display: block;
 }
-#header_box_five{
-    width: 85px;
-    height: 20px;
-    line-height: 20px;
-    border: 1px solid #CCCCCC;
-    border-radius: 6px;
-    margin: 7.5px 0 0 15px;
-    float: left;
-}
 /*µ¼º½À¸*/
 #nav{
     background: rgba(255, 255, 255, .5);
@@ -952,6 +943,7 @@ td{
     width: 100%;
     height: 330px;
     padding-left: 10px;
+    margin-top: 5px;
     box-sizing: border-box;
 }
 .alone_one_back{
@@ -959,23 +951,10 @@ td{
     height: 330px;
     float: left;
     margin-top: 5px;
-    opacity: 0.8;
     overflow: hidden;
-}
-.alone_one_back:nth-child(1){
-    background: url("../image/diablo3-cn.png") no-repeat;
-}
-.alone_one_back:nth-child(2){
-    background: url("../image/wow-cn.png") no-repeat;
-}
-.alone_one_back:nth-child(3){
-    background: url("../image/starcraft2-cn.png") no-repeat;
-}
-.alone_one_back:nth-child(4){
-    background: url("../image/overwatch-cn.png") no-repeat;
-}
-.alone_one_back:nth-child(5){
-    background: url("../image/hearthstone-cn.png") no-repeat;
+    border: 1px solid #DDDDDD;
+    box-sizing: border-box;
+    border-radius: 4px;
 }
 .alone_one_back>a{
     display: block;
@@ -983,15 +962,45 @@ td{
     height: 100%;
     font-size: 13px;
 }
-.alone_one_back:hover{
-    opacity: 1;
-}
 .alone_one_back>a>h3{
     width: 100%;
     height: 40px;
+
     line-height: 40px;
     text-align: center;
+    background: #CCCCCC;
     color: #FFFFFF;
+}
+.alone_one_back>a:hover h3{
+     color: #222222;
+ }
+.alone_one_back:nth-child(1)>a>div{
+    background: url("../image/diablo3-cn.png") no-repeat;
+}
+.alone_one_back:nth-child(2)>a>div{
+    background: url("../image/wow-cn.png") no-repeat;
+}
+.alone_one_back:nth-child(3)>a>div{
+    background: url("../image/starcraft2-cn.png") no-repeat;
+}
+.alone_one_back:nth-child(4)>a>div{
+    background: url("../image/overwatch-cn.png") no-repeat;
+}
+.alone_one_back:nth-child(5)>a>div{
+    background: url("../image/hearthstone-cn.png") no-repeat;
+}
+.alone_one_back>a>div{
+    width: 100%;
+    height: 290px;
+    overflow: hidden;
+}
+.alone_one_back>a>div>h3{
+    width: 100%;
+    height: 100%;
+    background: rgba(255,255,255,.3);
+}
+.alone_one_back>a>div>h3:hover{
+    background: rgba(255,255,255,0);
 }
 #section_stand_alone_two_down{
     padding: 15px;
