--- a/Application/Admin/View/index/menu.html
+++ b/Application/Admin/View/index/menu.html
@@ -20,18 +20,21 @@
     <li><a href="../../Public/order_list.html" title="商品列表" target="mainCont">订单列表</a></li>
    </ul>
   </li>
- 
+  <li class="menu-list-title">
+   <span>漫画管理</span>
+   <i>◢</i>
+  </li>
+  <li>
+   <ul class="menu-children">
+    <li><a href="{:U('game/index')}" title="管理列表" target="mainCont">管理列表</a></li>
+    <li><a href="../../Public/product_category.html" title="商品分类" target="mainCont">商品分类</a></li>
+    <li><a href="../../Public/recycle_bin.html" title="商品分类" target="mainCont">商品回收站</a></li>
+   </ul>
+  </li>
   <li class="menu-list-title">
    <span>游戏管理</span>
    <i>◢</i>
   </li>
-<!--  <li>
-   <ul class="menu-children">
-    <li><a hrgame_list.htmlhtml" title="商品列表" target="mainCont">商品列表</a></li>
-    <li><a href="product_category.html" title="商品分类" target="mainCont">商品分类</a></li>
-    <li><a href="recycle_bin.html" title="商品分类" target="mainCont">商品回收站</a></li>
-   </ul>
-  </li>-->
   <li>
    <ul class="menu-children">
     <li><a href="{:U('game/index')}" title="游戏列表" target="mainCont">游戏列表</a></li>
@@ -60,7 +63,7 @@
   <li>
    <ul class="menu-children">
     <li><a href="../../Public/basic_settings.html" title="站点基本设置" target="mainCont">站点基本设置</a></li>
-    <li><a href="../../Public/admin_list.html" title="站点基本设置" target="mainCont">站点管理员</a></li>
+    <li><a href="{:U('admin/admin/index')}" title="站点管理员" target="mainCont">站点管理员</a></li>
    </ul>
   </li>
   
