Signed-off-by: Akon916 <akon916@163.com> 提交修改

--- a/Application/Admin/View/admin/adminLogin.html
+++ b/Application/Admin/View/admin/adminLogin.html
@@ -28,7 +28,7 @@ $(document).ready(function() {
   <section class="loginform">
    <h1>后台管理系统</h1>
    <ul>
-    <form action="{:U('Admin/Admin/login')}" method="post">
+    <form action="{:U('Admin/login')}" method="post">
       <li>
          <label>账号：</label>
          <input type="text" class="textBox" placeholder="管理员账号" name="name"/>
