--- a/Public/Home/cartoon/css/index.css
+++ b/Public/Home/cartoon/css/index.css
@@ -148,7 +148,6 @@ legend{
     width: 64px;
     height: 64px;
     margin-left: 105px;
-    margin-top: 20px;
 }
 #header_all>div:nth-child(3)>a>img{
     display: block;
@@ -1486,7 +1485,7 @@ legend{
 }
 #login_second_all{
     width: 600px;
-    height: 350px;
+    height: 400px;
     border-radius: 5px;
     background: #ffffff;
     margin: 10% auto;
@@ -1543,7 +1542,29 @@ legend{
     border:none;
     background: transparent;
 }
-
+.er_code{
+    width: 100%;
+    height: 50px;
+    line-height: 30px;
+    margin-top: 14px;
+}
+.er_code>div{
+    width: 200px;
+    height: 32px;
+    border-radius: 5px;
+    border: 1px solid #DDDDDD;
+    float: left;
+    margin-top: 6px;
+}
+.er_code>img{
+    display: block;
+    width: 120px;
+    height: 40px;
+    border-radius: 2px;
+    border: 1px solid #DDDDDD;
+    float: left;
+    margin-left: 72px;
+}
 #notice_three{
     position: absolute;
     top: -16px;
