--- a/Public/Home/cartoon/css/login.css
+++ b/Public/Home/cartoon/css/login.css
@@ -82,14 +82,14 @@ legend{
 }
 #lg_part{
     width:308px;
-    height: 340px;
+    height: 400px;
     background:rgba(255,255,255,.8);
     border-radius: 8px;
     margin: 155px 0 0 400px;
 }
 #lg_msg{
     width:308px;
-    height: 275px;
+    height: 325px;
 }
 #lg_top{
     width: 100%;
@@ -128,21 +128,44 @@ legend{
     width: 100%;
     line-height: 30px;
 }
-#lg_down>div:nth-child(3)>span{
+#lg_down>div:nth-child(3)>div{
+    width: 100px;
+    height: 30px;
+    line-height: 30px;
+    border-radius: 5px;
+    border:1px solid #DDDDDD;
+    float: left;
+}
+#lg_down>div:nth-child(3)>img{
+    width: 100px;
+    height: 40px;
+    border-radius: 2px;
+    border: 1px solid #DDDDDD;
+    float: left;
+    margin-left: 25px;
+    margin-top: -4px;
+}
+#lg_down>div:nth-child(4){
+    clear: both;
+    height: 30px;
+    width: 100%;
+    line-height: 30px;
+}
+#lg_down>div:nth-child(4)>span{
     color: #888888;
 }
-#lg_down>div:nth-child(3)>a{
+#lg_down>div:nth-child(4)>a{
     color: #888888;
     float: right;
 }
-#lg_down>div:nth-child(3)>a:hover{
+#lg_down>div:nth-child(4)>a:hover{
     color: #e56606;
 }
-#lg_down>div:nth-child(4){
+#lg_down>div:nth-child(5){
     width: 100%;
     height: 40px;
 }
-#lg_down>div:nth-child(4)>input{
+#lg_down>div:nth-child(5)>input{
     display: block;
     width: 269px;
     height: 40px;
