--- a/Public/Home/cartoon/css/login.css
+++ b/Public/Home/cartoon/css/login.css
@@ -36,8 +36,9 @@ legend{
 }
 #main{
     width: 100%;
-    height: 835px;
+    height: 950px;
     background: url("../images/login_bak.jpg")no-repeat;
+    background-size: 100% 100%;
 }
 #down{
     width: 800px;
